--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <h1>Mi primer eitqueta</h1>
     <h2>Mi segunda eitqueta</h2>
@@ -15,5 +18,21 @@
     <h6>Mi sexta eitqueta</h6>
     <p><b>Mi etiqueta de parrafo en negritas</b></p>
     <p>Mi etiqueta de parrafo</p>
+    <!--  Esto es un comerntario -->
+    <form action="">
+        <input type="email"><br>
+        <button type="submit">Enviar &rarr;</button>
+        <!--Unicode &rarr;-->
+    </form>
+    <form action="">
+        <input type="text" id="name" placeholder="nombre">nombre<br>
+        <input type="text">apellido <br>
+        <input type="number">edad <br>
+        <input type="email" required>email <br>
+        <input type="password" required>contraseña <br>
+        <button type="submit"> enviar</button>
+    </form>
+    <img src="imagenes/capterra.png" alt="capterra">
 </body>
-</html>
+
+</html>       
