--- a/MiPagina/index.html
+++ b/MiPagina/index.html
@@ -88,10 +88,9 @@
     <!--Fin carrusel-->
 
     <!--Productos-->
-
-    <div class="row">
-        <!--Izquierda-->
-        <div class="col-2">
+    <div class="row row-cols-1 row-cols-md-4">
+        
+        <div class="col mb-4">
             <div class="accordion" id="accordionExample">
                 <div class="card">
                     <div class="card-header" id="headingOne">
@@ -181,81 +180,79 @@
                 </div>
             </div>
         </div>
-        <!--Derecha-->
 
-        <div class="col-3">
-            <div class="card" style="width: 20rem;">
-                <img src="imagenes/Alcohol/wiskey.webp" class="card-img-top" alt="...">
+        <div class="col mb-4">
+          <div class="card">
+            <img src="imagenes/Alcohol/wiskey.webp" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Whiskey Jonnye Walker 750ml</h5>
                     <p class="card-text">$15,000</p>
-                    <button type="button" class="btn btn-outline-success"><i class="bi bi-basket"></i> Agregar al carrito</button>
+                    <button type="button" class="btn btn-outline-success"><i class="bi bi-basket"></i> Agregar al
+                        carrito</button>
                 </div>
-            </div>
+          </div>
         </div>
-
-        <div class="col-3">
-            <div class="card " style="width: 20rem;">
-                <img src="imagenes/Alcohol/wiskey2.webp" class="card-img-top" alt="...">
+        <div class="col mb-4">
+          <div class="card">
+            <img src="imagenes/Alcohol/wiskey2.webp" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Whiskey Jonnye Walker Black 750ml</h5>
                     <p class="card-text">$1,000</p>
-                    <button type="button" class="btn btn-outline-success"><i class="bi bi-basket"></i> Agregar al carrito</button>
+                    <button type="button" class="btn btn-outline-success"><i class="bi bi-basket"></i> Agregar al
+                        carrito</button>
                 </div>
-            </div>
+          </div>
         </div>
-
-        <div class="col-3">
-            <div class="card" style="width: 20rem;">
-                <img src="imagenes/Alcohol/wiskey3.webp" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Dalmore 700ml</h5>
-                    <p class="card-text">$700</p>
-                    <button type="button" class="btn btn-outline-success"><i class="bi bi-basket"></i> Agregar al carrito</button>
-                </div>
+        <div class="col mb-4">
+          <div class="card">
+            <img src="imagenes/Alcohol/wiskey3.webp" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Dalmore 700ml</h5>
+                <p class="card-text">$700</p>
+                <button type="button" class="btn btn-outline-success"><i class="bi bi-basket"></i> Agregar al
+                    carrito</button>
             </div>
+          </div>
         </div>
-    </div>
     
-    <div class="row">
-        <div class="col-2">
+
+        <div class="col mb-4">
 
         </div>
-        <div class="col-3">
+        <div class="col mb-4">
             <div class="card" style="width: 20rem;">
                 <img src="imagenes/Alcohol/vino.webp" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Vino Monte Algo 650ml</h5>
                     <p class="card-text">$15,000</p>
-                    <button type="button" class="btn btn-outline-success"><i class="bi bi-basket"></i> Agregar al carrito</button>
+                    <button type="button" class="btn btn-outline-success"><i class="bi bi-basket"></i> Agregar al
+                        carrito</button>
                 </div>
             </div>
         </div>
-        <div class="col-3">
+        <div class="col mb-4">
             <div class="card" style="width: 20rem;">
                 <img src="imagenes/Alcohol/ron.webp" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Capitan Morgan 750ml</h5>
                     <p class="card-text">$15,000</p>
-                    <button type="button" class="btn btn-outline-success"><i class="bi bi-basket"></i> Agregar al carrito</button>
+                    <button type="button" class="btn btn-outline-success"><i class="bi bi-basket"></i> Agregar al
+                        carrito</button>
                 </div>
             </div>
         </div>
-        <div class="col-3">
+        <div class="col mb-4">
             <div class="card" style="width: 20rem;">
                 <img src="imagenes/pepe-venta.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Pepe Special Edition RE4</h5>
                     <p class="card-text">$12,500,000</p>
-                    <button type="button" class="btn btn-outline-success"><i class="bi bi-basket"></i> Agregar al carrito</button>
+                    <button type="button" class="btn btn-outline-success"><i class="bi bi-basket"></i> Agregar al
+                        carrito</button>
                 </div>
             </div>
         </div>
     </div>
-
-
-
-
     <!--Fin Productos-->
 
 
